--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ Options are financial derivatives that give the buyer the right, but not the obl
 
 ## Option Specifications
 
-In order to understand vanilla options pricing, we need to look at the following factors:
+In order to understand vanilla options pricing, we need to look at the following features:
 
 1. Strike price
     - The specified price at which the underlying asset can be bought or sold
@@ -192,7 +192,7 @@ display(HTML("<div style='height: 15em;'>" +
 
 ::: {.incremental}
 
-- Gamma: measures the rate of change in an option's *delta*. 
+- Gamma: measures the rate of change in an option's *delta* to changes in the underlying asset's *price*.
 
 - Vega: measures the sensitivity of an option's price to changes in the *volatility* of the underlying asset. 
 
@@ -244,19 +244,19 @@ fig.show()
 
 Hedging reduces exposure for possible future scenarios. Price changes are the main risk factor.
 
-- Static hedge: hedged portfolio's risk profile does not change materially over possible future sceanrios. 
+- Static hedge: hedged portfolio's risk profile does not change materially over possible future scenarios. 
 
     - futures vs physical exposure.
 
     - put-call parity: call - put = underlying - strike
 
-- Dymanic hedge: delta hedging and rehedging as required
+- Dynamic hedge: delta hedging and re-hedging as required
 
     - futures option vs futures.
 
 ## Dynamic Hedging 
 
-- Positive gamma lead to natual *buy low sell high* rehedging trades and produce hedgding profit. 
+- Positive gamma lead to natural *buy low sell high* re-hedging trades and produce hedging profit. 
 
 - Option loses time value as time to expiration reduces.
 
@@ -337,6 +337,16 @@ def plotfuture(sym):
                      # size_max=0,
                      # color_continuous_scale='bluered'
                      ).update_traces(marker_sizemin=2)
+    # fig = make_subplots(specs=[[{"secondary_y": True}]])
+    line = px.line(df,
+                     x="Contract",
+                     y="SettlePrice",
+                    #  size="PrevDayOI",
+                    #  color="PrevDayOI",
+                     # size_max=0,
+                     # color_continuous_scale='bluered'
+                     )#.update_traces(marker_sizemin=2)
+    fig.add_trace(line.data[0])
     fig.update_xaxes(
         # dtick="M6",
         tickformat="%b-%y",
