--- a/index.qmd
+++ b/index.qmd
@@ -390,6 +390,20 @@ fig.show()
 
 # Corn Option
 
+- Deliverable into Corn Futures, American style call/put
+
+- Listed Contracts:
+    - Monthly contracts listed for 4 consecutive months and:
+    - 3 monthly contracts of Mar listed in July
+    - 3 monthly contracts of May listed in September
+    - 3 monthly contracts of Sep listed in March
+    - 7 monthly contracts of Jul and Dec listed in November
+
+::: footer
+Source [CME Corn Option Specs ](https://www.cmegroup.com/markets/agriculture/grains/corn.contractSpecs.options.html)
+:::
+
+
 ## Corn  Futures Settlements
 
 ```{python}
